--- a/FINAL.ipynb
+++ b/FINAL.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Instructions ##\n",
     "\n",
-    "Run first cell below (\"from function_new2 import*, interactive_selection()) by clicking on __1) Cell__ and __2) Run Cells__ or by shortkut __Shift + Enter__ on PC.\n",
+    "Run first cell below by clicking on __1) into the Cell__ , __2) Cell__ and __3) Run Cells__ or by shortkut __Shift + Enter__ on PC.\n",
     "\n",
     "Then chose your holds by clicking on the hold location grid below. Your selection will appear while clicking on the hold location buttons - it doesn't affect the grade if you are pressing the same hold twice.\n",
     "\n",
